# simulated_annealing_s3e2

./: README.md
paralelo/base/: .gitignore  CMakeLists.txt  make_choice_parents.py  readme.md  script.slurm  script_2.slurm
paralelo/base/R/: .Rhistory  R_test.R  graphicsBestSolution2.txt  info-graphics.txt  info-graphics2.txt  info-graphicsBestSolution.txt  info-register.txt  info-register2.txt  info.txt  info2.txt
paralelo/base/R/result_max_dist/: 2024-05-13 T:18-29-info-graphics.txt  2024-05-13 T:18-29-info-graphicsBestSolution.txt  2024-05-13 T:18-29-info-register.txt  2024-05-13 T:18-29-info.txt
paralelo/base/data/: alumnos_test.txt  colegios_test.txt  parents.txt
paralelo/base/data/R/: file.R  test_2.json
paralelo/base/exp/: exp.cpp  params_exp.txt
paralelo/base/include/: CUDAWrapper.cuh  Dataset.hpp  MaxHeap.hpp  RecordManager.hpp  SimulatedAnnealing.cuh  SimulatedFactory.hpp  config-variables.hpp  kernel.cuh  structData.cuh  structDist.hpp
paralelo/base/include/structure/AcceptanceCriterion/: AcceptanceCriterion.hpp
paralelo/base/include/structure/CoolingScheme/: CoolingScheme.hpp
paralelo/base/include/structure/ReheatingMethod/: ReheatingMethod.hpp
paralelo/base/include/utils/: SAParameters.hpp
paralelo/base/src/: CUDAWrapper.cu  Dataset.cpp  ExplorationCriterion.cpp  RecordManager.cpp  ReheatingMethods.cpp  SimulatedAnnealing.cu  SimulatedFactory.cpp  kernel.cu  main.cpp  sas.cu
paralelo/base/src/structure/CoolingScheme/: CoolingScheme.cpp
paralelo/base/src/structure/ReheatingMethod/: ReheatingMethod.cpp
paralelo/base/src/test/: grid.cpp
paralelo/blockCol_threadEst/: info_save_test.txt  readme.md  script_get.bash
paralelo/blockCol_threadEst/src/: AcceptanceCriterion.cpp  main.cpp  sas.cu
paralelo/col_to_stu (copia)/: CMakeLists.txt
paralelo/col_to_stu (copia)/include/: AcceptanceCriterion.hpp  kernel.cuh
paralelo/col_to_stu (copia)/src/: kernel.cu  main.cpp  sas.cu
paralelo/col_to_stu/data/: colegios_utm.txt
paralelo/col_to_stu/include/: CoolingScheme.hpp  ReheatingMethods.hpp  kernel.cuh
paralelo/col_to_stu/src/: ExplorationCriterion.cpp  kernel.cu  main.cpp  sas.cu
paralelo/col_to_stu_classes/: CMakeLists.txt  readme.md
paralelo/col_to_stu_classes/exp/: paralelo.py  params_test1.txt  test1.cpp
paralelo/col_to_stu_classes/include/: AcceptanceCriterion.hpp  CUDAWrapper.cuh  CoolingScheme.hpp  ExplorationCriterion.hpp  RecordManager.hpp  ReheatingMethods.hpp  SimulatedAnnealing.cuh  SimulatedFactory.hpp  TemperatureLength.hpp  config-variables.hpp  sas-old.cuh  sas.cuh
paralelo/col_to_stu_classes/include/structure/CoolingScheme/: CoolingScheme.hpp
paralelo/col_to_stu_classes/include/structure/ExplorationCriterion/: ExplorationCriterion.hpp
paralelo/col_to_stu_classes/include/structure/LengthTemperature/: LengthTemperature.hpp
paralelo/col_to_stu_classes/src/: AcceptanceCriterion.cpp  CUDAWrapper.cu  CoolingScheme.cpp  ExplorationCriterion.cpp  RecordManager.cpp  RecordManager.hpp  ReheatingMethods.cpp  SimulatedAnnealing.cu  SimulatedFactory.cpp  TemperatureLength.cpp  main.cpp  sas.cu
paralelo/col_to_stu_classes_v2/: CMakeLists.txt.executable  CMakeLists.txt.library  build_exp
paralelo/col_to_stu_classes_v2/exp/: exp.cpp  params_exp.txt  test1.cpp  wscript
paralelo/col_to_stu_classes_v2/include/: CUDAWrapper.cuh  Dataset.hpp  SimulatedAnnealing.cuh  SimulatedFactory.hpp  kernel.cuh
paralelo/col_to_stu_classes_v2/include/structure/AcceptanceCriterion/: AcceptanceCriterion.hpp
paralelo/col_to_stu_classes_v2/include/utils/: SAParameters.hpp
paralelo/col_to_stu_classes_v2/src/: CUDAWrapper.cu  Dataset.cpp  SimulatedAnnealing.cu  SimulatedFactory.cpp  kernel.cu  main.cpp
paralelo/col_to_stu_classes_v2/src/structure/AcceptanceCriterion/: AcceptanceCriterion.cpp
paralelo/col_to_stu_classes_v2/src/structure/ExplorationCriterion/: ExplorationCriterion.cppp
paralelo/col_to_stu_classes_v2/src/structure/LengthTemperature/: LengthTemperature.cpp
paralelo/col_to_stu_v2/: CMakeLists.txt
paralelo/col_to_stu_v2/include/: ExplorationCriterion.hpp  kernel.cuh
paralelo/col_to_stu_v2/src/: CoolingScheme.cpp  TemperatureLength.cpp  kernel.cu  main.cpp  sas.cu
paralelo/optBayesian/blockCol_threadEst/: CMakeLists.txt  value.py
paralelo/optBayesian/blockCol_threadEst/data/: alumnos_utm.txt
paralelo/optBayesian/blockCol_threadEst/include/: ReheatingMethods.hpp  kernel.cuh  sas.cuh
paralelo/optBayesian/blockCol_threadEst/saveIteration/: bayesopt2022-12-10 T:17-14  bayesopt2022-12-10 T:17-18
paralelo/optBayesian/blockCol_threadEst/src/: ReheatingMethods.cpp  kernel.cu  main.cpp  sas.cu
paralelo/optBayesian/col_to_stu_v2/: CMakeLists.txt  script_test.bash
paralelo/optBayesian/col_to_stu_v2/include/: ReheatingMethods.hpp  sas.cuh
paralelo/optBayesian/col_to_stu_v2/src/: ReheatingMethods.cpp  kernel.cu  main.cpp  sas.cu
secuencial/base/: .gitignore  CMakeLists.txt
secuencial/base/include/: AcceptanceCriterion.hpp  CoolingScheme.hpp  ExplorationCriterion.hpp  ReheatingMethods.hpp  TemperatureLength.hpp  sas.hpp
secuencial/base/src/: AcceptanceCriterion.cpp  CoolingScheme.cpp  ExplorationCriterion.cpp  ReheatingMethods.cpp  TemperatureLength.cpp  main.cpp  sas.cpp
